--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -140,5 +140,9 @@ collections:
         public_folder: "/img"
         create: true
         fields:
+        - label: "Photos"
+          name: "photos"
+          widget: "list"
+          fields:
           - { label: "Image", name: "image", widget: "image" }
           - { label: "Caption", name: "caption", widget: "string", required: false }
