--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "1.1.3",
   "author": "Austin Green",
   "dependencies": {
+    "aos": "^2.3.4",
     "bulma": "^0.9.0",
     "framer-motion": "^6.5.1",
     "gatsby": "^4.0.0",
