--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -27,7 +27,7 @@ collections:
         }
       - { label: "Title", name: "title", widget: "string" }
       - { label: "Publish Date", name: "date", widget: "datetime" }
-      - { label: "Description", name: "description", widget: "text" }
+      - { label: "Description", name: "description", widget: "markdown" }
       - { label: "Featured Post", name: "featuredpost", widget: "boolean" }
       - { label: "Featured Image", name: "featuredimage", widget: image }
       - { label: "Body", name: "body", widget: "markdown" }
@@ -63,7 +63,7 @@ collections:
           - { label: "Title", name: "title", widget: "string" }
           - { label: "Image", name: "portraitImage", widget: "image" }
           - { label: "Body", name: "body", widget: "markdown" }
-          
+
       - file: "src/pages/photos/index.md"
         name: "photos"
         label: "Photos Page"
@@ -71,9 +71,14 @@ collections:
         public_folder: "/img"
         create: true
         fields:
-        - label: "Photos"
-          name: "photos"
-          widget: "list"
-          fields:
-          - { label: "Image", name: "image", widget: "image" }
-          - { label: "Caption", name: "caption", widget: "string", required: false }
+          - label: "Photos"
+            name: "photos"
+            widget: "list"
+            fields:
+              - { label: "Image", name: "image", widget: "image" }
+              - {
+                  label: "Caption",
+                  name: "caption",
+                  widget: "string",
+                  required: false,
+                }
