--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "author": "Austin Green",
   "dependencies": {
     "aos": "^2.3.4",
+    "bootstrap": "^5.3.3",
     "bulma": "^0.9.0",
     "framer-motion": "^6.5.1",
     "gatsby": "^4.0.0",
@@ -28,8 +29,10 @@
     "netlify-cms-media-library-uploadcare": "^0.5.10",
     "prop-types": "^15.6.0",
     "react": "^17.0.0",
+    "react-bootstrap": "^2.10.2",
     "react-dom": "^17.0.0",
     "react-helmet": "^6.0.0",
+    "react-icons": "^5.0.1",
     "sass": "^1.43.2",
     "uuid": "^8.0.0"
   },
